<resources>
    <string name="app_name">Statustan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="suggestion">Suggestion</string>
    <string name="favourite">Favourite</string>
    <string name="login">Login</string>
    <string name="Jokes">Jokes</string>
    <string name="status">Status</string>
    <string name="Shayari">Shayari</string>
    <string name="Pun">Pun</string>
    <string name="Ascii">Ascii</string>
    <string name="Quotes">Quotes</string>
    <string name="Memes">Memes</string>
    <string name="Dialogs">Dialogs</string>
    <string name="Poems">Poem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
