<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_text"
        android:iconTint="@color/colorAccent"
        android:icon="@drawable/ic_text_fields_black_24dp"
        android:title="@string/text" />

    <item
        android:id="@+id/navigation_image"
        android:iconTint="@color/colorAccent"
        android:icon="@drawable/ic_image_black_24dp"
        android:title="@string/image"/>
    <item
        android:id="@+id/navigation_suggestion"
        android:iconTint="@color/colorAccent"
        android:icon="@drawable/suggestion"
        android:title="@string/suggestion" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/favourite"
        android:iconTint="@color/colorAccent"
        android:title="@string/favourite" />


    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/login"
        android:iconTint="@color/colorAccent"
        android:title="@string/login"/>

</menu>